<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragmentHome"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/fragmentSearchByName"
            android:icon="@drawable/ic_search"
            android:title="@string/search_by_name" />
        <item
            android:id="@+id/fragmentSearchRandom"
            android:icon="@drawable/ic_random"
            android:title="@string/search_random" />
        <item
            android:id="@+id/fragmentFavourites"
            android:icon="@drawable/ic_add"
            android:title="@string/favourites" />
    </group>
    <item android:title="@string/learn_more">
        <menu>
            <item
                android:id="@+id/fragmentWebView"
                android:icon="@drawable/ic_info"
                android:title="@string/about_api" />
        </menu>
    </item>
</menu>